--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --exec tsx src/index.ts",
+    "dev": "nodemon --exec 'tsx --env-file=.env src/index.ts'",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
